# sbtree

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Paper.ipynb  README.md  deployment.toml  loading_okeys.json  test_env
figures/: Publius.drawio
figures/motivation/: Publius.drawio
results/bench/: continuous.csv  essai1_Medium.csv  essai3_Medium.csv  essai_Medium.csv  mid_High(10).csv  mid_High(4).csv  mid_High.csv  mid_continuous.csv  post_Low.csv  post_Medium.csv  post_VeryLow.csv  post_wait_1m.csv  post_wait_1s.csv  pre_Low.csv  pre_Medium.csv  pre_VeryLow.csv  pre_wait_1m.csv  pre_wait_1s.csv  simple_High(1).csv  simple_High(10).csv  simple_High(2).csv  simple_High(3).csv  simple_High(4).csv  simple_High(8).csv  simple_High.csv  simple_Low.csv  simple_Medium.csv  simple_VeryLow.csv  simple_continous.csv  simple_dynamo_continuous.csv  simple_dynamo_wait_1s.csv  simple_wait_1m.csv  simple_wait_1s.csv
src/: bench_fn.rs  client.rs  deployment.toml  global_ownership.rs  inference_deployment.toml  lib.rs  main.rs  test_deployment.toml
src/btree/: block.rs  btree_bench.rs  btree_test.rs  local_ownership.rs  manager.rs  mod.rs  recovery.rs  structure.rs
src/sqlite/: actor.rs  mod.rs  structure.rs
